added endpoints for user updated, also added middleware to check if user is authed (parsing token for claims and check if token is valid)
